--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Club Penguin</h1>
         <a href="https://github.com/<koikoifishe>" class="github-button">
-            <img src="github-logo.png" alt="GitHub Logo"> My Projects
+            <img src="github.png" alt="GitHub Logo"> My Projects
         </a>
     </header>
     <main>
