--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Club Penguin</h1>
-        <a href="https://github.com/<koikoifishe>" class="github-button">
+        <a href="https://github.com/koikoifishe" class="github-button">
             <img src="github.png" alt="GitHub Logo"> My Projects
         </a>
     </header>
